--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17125,3 +17125,9 @@ body {
   border-top: 1px solid #dcebf5;
 }
 
+/* Add container and footer space */
+
+#app > div.container {
+  margin-bottom: 100px;
+}
+
